adding emptyView to playlist as well as playlist auto-refresh

--- a/lib/server/public/index.html
+++ b/lib/server/public/index.html
@@ -29,6 +29,12 @@
 
 <!-- TEMPLATES ============================================== -->
 
+<script id="empty-list" type="text/template">
+
+    No items in queue.
+
+</script>
+
 <script id="playlist-item" type="text/template">
 
     <span class='file'>File: <%- filepath %></span>
